tests/errors/init_state/cfg_shape/join_disagreement_produces_diverged.sim
# Only one branch inits x; the merge is Diverged and reading errors.
fn f(b: bool) {
  x: i64;
  y: i64;
  entry:
    branch(copy b) [true: t, false: fbr]
  t:
    x = 1;
    goto merge
  fbr:
    goto merge
  merge:
    y = copy x;
    return
}
