tests/errors/init_state/cfg_shape/join_disagreement_produces_diverged.err.expected
error: at 13:5: [INIT-UseInconsistent] In function 'f', block 'merge': variable 'x' may be used before initialization or after move (state inconsistent across paths)
    |
 13 |     y = copy x;
    |     ^^^^^^^^^^
